--- a/CSS/screens/more.css
+++ b/CSS/screens/more.css
@@ -7,3 +7,31 @@
 .more-suggestion__title {
   margin-bottom: 30px;
 }
+
+.more-suggestion__icons {
+  display: flex;
+}
+
+.more-suggestion__icon {
+  margin-right: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.more-suggestion__icon-img {
+  width: 60px;
+  height: 60px;
+  background-color: var(--yellow);
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.more-suggestion__icon-img i {
+  font-size: 30px;
+  color: white;
+}
