--- a/CSS/components/alt-screen-header.css
+++ b/CSS/components/alt-screen-header.css
@@ -12,9 +12,22 @@
 }
 
 .alt-header__column:first-child {
+  width: 25%;
   margin-right: auto;
+}
+
+.alt-header__column:nth-child(2) {
+  text-align: center;
+  width: 50%;
 }
 
 .alt-header__column:last-child {
   margin-left: auto;
+  display: flex;
+  width: 25%;
+  justify-content: flex-end;
+}
+
+.alt-header__column span:last-child {
+  margin-left: 20px;
 }
